SimpleComplex/Utils 1.x, 2018-06-23
-----------------------------------
- Array merge unique recursive erring when non-unique assoc key and both values
  aren't array.

SimpleComplex/Utils 1.x, 2018-06-19
-----------------------------------
- PathList features skipUnreadable, itemValue, customFilter.
- Release 1.6.

SimpleComplex/Utils 1.x, 2018-06-18
-----------------------------------
- PathList replaces PathFileList and PathFileListUnique, having better
 and extendable filter capabilities and supporting finding dirs.

SimpleComplex/Utils 1.x, 2018-06-17
-----------------------------------
- PathFileListUnique throw FileNonUniqueException to ease identification
  of error; RuntimeException too generic.

SimpleComplex/Utils 1.x, 2018-06-16
-----------------------------------
- PathFileList constructor allow leading dot in requireExtensions.

SimpleComplex/Utils 1.x, 2018-06-14
-----------------------------------
- PathFileList didn't match long extensions exactly.

SimpleComplex/Utils 1.x, 2018-06-03
-----------------------------------
- Explorable toObject() and implement JsonSerializable.
- Time implement JsonSerializable to serialize to ISO-8601 string.
- Release 1.5.0.

SimpleComplex/Utils 1.x, 2018-06-01
-----------------------------------
- Freezables shan't freeze() if costly and already frozen.

SimpleComplex/Utils 1.x, 2018-05-30
-----------------------------------
- Constant time interval class, mending shortcomings of native DateInterval.
  And Time::diffConstant() to create such.

SimpleComplex/Utils 1.x, 2018-05-29
-----------------------------------
- Time class renamed; from DateTimeSimple.

SimpleComplex/Utils 1.x, 2018-05-27
-----------------------------------
- DateTimeSimple override \DateTime::setTime() to support (though ignore)
  $microseconds argument.
- DateTimeSimple::setToDateStart().
- Explorable::explorablesAutoDefine() auto-generates list of explorable
  properties.
- ExplorableGetSetTrait.

SimpleComplex/Utils 1.x, 2018-05-25